--- a/_posts/2025-05-27-06 - Rat in a Maze.md
+++ b/_posts/2025-05-27-06 - Rat in a Maze.md
@@ -8,3 +8,43 @@ tags : [Rat in a Maze]
 ---
 
 # Rat in a Maze
+
+**Kelompok 6**
+- Rizky Nur Fariid
+- Muh. Anugrah Ashary P.
+- Azizah Nurul Izzah
+- Nur Atika Binti Ardi
+- Shabrina Zahrah R.
+
+## Rat in a Maze Problem
+Masalah "Rat in a Maze" adalah sebuah masalah di mana seekor tikus harus keluar dari sebuah labirin (maze) yang diwakili oleh matriks atau grid. Dalam grid tersebut, terdapat sel-sel yang bisa dilewati (bernilai 1) dan terhalang (bernilai 0). Tujuan dari masalah ini adalah menemukan jalur yang memungkinkan tikus untuk bergerak dari titik awal (0, 0) ke titik tujuan (N-1, N-1) dengan mengikuti aturan tertentu.
+
+## Prinsip Kerja:
+- Gerakan Tikus: Tikus dapat bergerak ke empat arah (atas, bawah, kiri, kanan) dari setiap posisi.
+- Validasi Gerakan: Setiap gerakan hanya diterima jika sel tujuan tidak keluar dari batas labirin dan tidak terhalang (nilai 1).
+- Backtracking: Jika jalur yang dipilih tidak membawa tikus ke tujuan, maka tikus akan mundur (backtrack) ke posisi sebelumnya dan mencoba arah lain.
+
+## Langkah Penyelesaian:
+- Tikus mencoba bergerak ke arah yang valid (kanan, bawah, kiri, atau atas).
+- Jika langkah valid, tikus lanjut ke sel tersebut.
+- Jika tidak ada jalan menuju tujuan, tikus mundur (backtrack) ke posisi sebelumnya dan mencoba arah lain.
+- Proses ini diulang hingga tikus berhasil mencapai tujuan atau semua kemungkinan jalan telah dicoba.
+
+## Kelebihan dan Kekurangan:
+### Kelebihan:
+
+- Sederhana dan mudah diimplementasikan.
+- Dapat menemukan semua solusi yang memungkinkan.
+- Fleksibel dan tidak memerlukan struktur data kompleks.
+
+### Kekurangan:
+- Kurang efisien untuk kasus labirin besar.
+- Rentan terhadap masalah stack overflow jika jalur terlalu panjang.
+- Tidak optimal dan dapat mengulang jalur yang sama jika tidak diatur dengan benar.
+
+## Aplikasi Dunia Nyata:
+- Robot Navigasi: Digunakan untuk mencari jalur optimal bagi robot.
+- Pencarian Jalur di GPS: Untuk menentukan jalur terbaik antara dua lokasi.
+- Simulasi dan Permainan: Digunakan dalam permainan atau simulasi berbasis labirin.
+
+Masalah Rat in a Maze adalah aplikasi klasik dari algoritma backtracking yang digunakan untuk mencari jalur dalam labirin dari titik awal ke titik tujuan. Dengan menggunakan metode ini, tikus mencoba untuk bergerak ke arah yang valid (atas, bawah, kiri, kanan) dan mundur (backtrack) jika jalur yang dipilih tidak berhasil. Meskipun metode ini sederhana dan efektif dalam menemukan solusi, namun pendekatan ini kurang efisien pada labirin yang sangat besar, karena membutuhkan banyak percabangan dan rekursi. Meski begitu, algoritma ini memiliki aplikasi luas dalam robot navigasi, sistem pencarian jalur di GPS, dan dalam simulasi permainan berbasis labirin, menjadikannya teknik yang sangat relevan untuk berbagai masalah praktis.
